--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-google-maps/api": "^2.20.6",
     "axios": "^1.8.3",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.13",
     "f": "^1.4.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
