--- a/package.json
+++ b/package.json
@@ -54,5 +54,21 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "vite": "^6.2.0"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Abhishek-Rajopadhye/smart-parking-frontend.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Abhishek-Rajopadhye/smart-parking-frontend/issues"
+  },
+  "homepage": "https://github.com/Abhishek-Rajopadhye/smart-parking-frontend#readme"
 }
