--- a/package.json
+++ b/package.json
@@ -1,74 +1,78 @@
 {
-  "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.11",
-    "@mui/lab": "^6.0.0-beta.31",
-    "@mui/material": "^6.4.11",
-    "@mui/x-date-pickers": "^7.28.0",
-    "@react-google-maps/api": "^2.20.6",
-    "axios": "^1.8.4",
-    "date-fns": "^2.30.0",
-    "dayjs": "^1.11.13",
-    "f": "^1.4.0",
-    "jspdf": "^3.0.1",
-    "jspdf-autotable": "^5.0.2",
-    "node-fetch": "^3.3.2",
-    "razorpay": "^2.9.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-geocode": "^2.0.1",
-    "react-google-autocomplete": "^2.7.4",
-    "react-google-maps": "^9.4.5",
-    "react-icons": "^5.5.0",
-    "react-places-autocomplete": "^7.3.0",
-    "react-router-dom": "^7.3.0",
-    "recompose": "^0.30.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@swc/core": "^1.11.21",
-    "@swc/jest": "^0.2.37",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "vite": "^6.2.0"
-  },
-  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
-  "main": "eslint.config.js",
-  "directories": {
-    "test": "tests"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Abhishek-Rajopadhye/smart-parking-frontend.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Abhishek-Rajopadhye/smart-parking-frontend/issues"
-  },
-  "homepage": "https://github.com/Abhishek-Rajopadhye/smart-parking-frontend#readme"
+	"name": "frontend",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"start": "node index.js",
+		"dev": "vite",
+		"build": "vite build",
+		"lint": "eslint .",
+		"preview": "vite preview",
+		"test": "vitest",
+		"test:ui": "vitest --ui"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.0",
+		"@mui/icons-material": "^6.4.11",
+		"@mui/lab": "^6.0.0-beta.31",
+		"@mui/material": "^6.4.11",
+		"@mui/x-date-pickers": "^7.28.0",
+		"@react-google-maps/api": "^2.20.6",
+		"@testing-library/jest-dom": "^6.6.3",
+		"axios": "^1.8.4",
+		"date-fns": "^2.30.0",
+		"dayjs": "^1.11.13",
+		"f": "^1.4.0",
+		"jspdf": "^3.0.1",
+		"jspdf-autotable": "^5.0.2",
+		"node-fetch": "^3.3.2",
+		"razorpay": "^2.9.6",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"react-geocode": "^2.0.1",
+		"react-google-autocomplete": "^2.7.4",
+		"react-google-maps": "^9.4.5",
+		"react-icons": "^5.5.0",
+		"react-places-autocomplete": "^7.3.0",
+		"react-router-dom": "^7.3.0",
+		"recompose": "^0.30.0"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.21.0",
+		"@swc/core": "^1.11.21",
+		"@swc/jest": "^0.2.37",
+		"@testing-library/react": "^16.3.0",
+		"@testing-library/user-event": "^14.6.1",
+		"@types/react": "^19.0.10",
+		"@types/react-dom": "^19.0.4",
+		"@vitejs/plugin-react": "^4.3.4",
+		"@vitest/ui": "^3.1.2",
+		"eslint": "^9.21.0",
+		"eslint-plugin-react-hooks": "^5.1.0",
+		"eslint-plugin-react-refresh": "^0.4.19",
+		"globals": "^15.15.0",
+		"identity-obj-proxy": "^3.0.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"jsdom": "^26.1.0",
+		"vite": "^6.2.0",
+		"vitest": "^3.1.2"
+	},
+	"description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+	"main": "eslint.config.js",
+	"directories": {
+		"test": "tests"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Abhishek-Rajopadhye/smart-parking-frontend.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/Abhishek-Rajopadhye/smart-parking-frontend/issues"
+	},
+	"homepage": "https://github.com/Abhishek-Rajopadhye/smart-parking-frontend#readme"
 }
