--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"@mui/x-date-pickers": "^7.28.0",
 		"@react-google-maps/api": "^2.20.6",
 		"@testing-library/jest-dom": "^6.6.3",
-		"axios": "^1.8.4",
+		"axios": "^1.9.0",
 		"date-fns": "^2.30.0",
 		"dayjs": "^1.11.13",
 		"f": "^1.4.0",
@@ -29,13 +29,14 @@
 		"jspdf-autotable": "^5.0.2",
 		"node-fetch": "^3.3.2",
 		"razorpay": "^2.9.6",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
 		"react-geocode": "^2.0.1",
 		"react-google-autocomplete": "^2.7.4",
 		"react-google-maps": "^9.4.5",
 		"react-icons": "^5.5.0",
 		"react-places-autocomplete": "^7.3.0",
+		"react-router": "^7.5.2",
 		"react-router-dom": "^7.3.0",
 		"recompose": "^0.30.0"
 	},
