--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"@eslint/js": "^9.21.0",
 		"@swc/core": "^1.11.21",
 		"@swc/jest": "^0.2.37",
+		"@testing-library/dom": "^10.4.0",
 		"@testing-library/react": "^16.3.0",
 		"@testing-library/user-event": "^14.6.1",
 		"@types/react": "^19.0.10",
