--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@googlemaps/markerclusterer": "^2.5.3",
     "@mui/icons-material": "^6.4.11",
     "@mui/lab": "^6.0.0-beta.31",
     "@mui/material": "^6.4.11",
@@ -31,11 +32,9 @@
     "react-dom": "^19.0.0",
     "react-geocode": "^2.0.1",
     "react-google-autocomplete": "^2.7.4",
-    "react-google-maps": "^9.4.5",
     "react-icons": "^5.5.0",
     "react-places-autocomplete": "^7.3.0",
-    "react-router-dom": "^7.3.0",
-    "recompose": "^0.30.0"
+    "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
